# purse

./: .gitignore  config.yml  pyproject.toml
docs/: bestpractices.md  prd.md  workplan.md
purse/: .gitignore  LICENSE  README.md
purse/src/purse/services/: content_parser.py  file_system_manager.py  markdown_handler.py  notification_service.py  search_manager.py  tts_service.py
purse/src/purse/services/cloud_storage/: dropbox_service.py  onedrive_service.py
purse/src/purse/ui/: main_app_window.py
purse/src/purse/utils/: common.py  constants.py
src/: app_state.py  logger_setup.py  main.py
src/models/: article.py
src/purse/: config_manager.py  main.py
src/purse/models/: article.py
src/purse/resources/: purse_icon.png.placeholder.txt
src/purse/services/: http_client.py  sync_manager.py
src/purse/services/cloud_storage/: google_drive_service.py
src/purse/ui/: __init__.py
src/services/: content_parser.py  file_system_manager.py  http_client.py  markdown_handler.py  notification_service.py  pocket_importer.py  search_manager.py  sync_manager.py
src/services/cloud_storage/: __init__.py  base_cloud_service.py  dropbox_service.py  google_drive_service.py  onedrive_service.py
src/ui/: article_list_view.py  commands.py  reader_view.py
src/utils/: common.py
